# To_Do_project

./: .env  .gitignore  Dockerfile  Interface.py  alembic.ini  auth.json  docker-compose.yml  entrypoints.sh  init.sql  main.py  mycron  pyproject.toml  requirements.txt  task_manager_clean.sql  test.py  voice.webm
UI/: CLI_interface.py  GUI_interface.py  TELEGRAM_interface.py
UI/static/: new_task_styles.css  profile.css  styles.css  tasks_styles.css
UI/templates/: dashboard.html  index.html  new_task.html  profile.html  tasks.html
UI/web_interface/: WEB_interface.py
alembic/: env.py
alembic/versions/: 04478dab9d9b_add_source_column_that_shows_us_who_.py  044847fb644a_set_nullable_false_for_is_arvived_column.py  0d9de231c408_make_a_current_streak_and_longest_.py  1a9aa32751f9_update_task_table_make_last_updated_.py  1eab802d422c_test.py  1ff7ea01d22d_add_is_arvhieved_column_to_tasks.py  2394c3fb0cfa_initial_migration.py  2e5d354d67e0_make_name_nullable.py  3fcb0f2157bd_update_task_table_make_last_updated_.py  59cb689bc68d_add_codewars_completed_table.py  7cdf16ccb7e2_add_users_and_user_id_to_tasks.py  8588988509e5_update_task_table_make_last_updated_.py  8da3a4cf2c05_add_users_and_user_id_to_tasks.py  9276cb9dc796_init.py  (+9 more)
app/db_sql/: connect.py  (+1 more)
data/: data.json  data.pkl  difficulty_data.csv  tasks.db  training_data.csv
db_sql/: create.sql
db_sqlalchemy/: connect.py
model/: metrics.json  my_models.py  train_difficulty.py
repository/: tasks.py
services/: logger_config.py  tasks.py  update_overdue.py
tasks/: manager.py  persistance.py  task.py
(+13 files in other folders)
