[project]
name = "to-do-list"
version = "0.1.0"
description = "to_do_list project"
authors = [
    {name = "maxim",email = "max.brawl2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "fastapi[standard] (>=0.123.4,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "aiohttp (>=3.13.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
