[project]
name = "to-do-list"
version = "0.1.0"
description = "to_do_list project"
authors = [
    {name = "maxim",email = "max.brawl2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "fastapi[standard] (>=0.123.4,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "whisper (>=1.1.10,<2.0.0)",
    "openai-whisper (>=20250625,<20250626)",
    "openai (>=2.13.0,<3.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "google-genai (>=1.56.0,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
